[package]
name = "PhotosNorm"
version = "0.0.1"
edition = "2021"
description = "Automatic rotate, rename and exif fix"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/NicolasDuboisToulouse/PhotosNormReloaded"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"]}
clap-markdown = "0.1.4"
enumset = "1.1.5"
image = "0.25.5"
infer = "0.16.0"
little_exif = "0.6.2"
tempfile = "3.14.0"
