[package]
name = "PhotosNorm"
version = "0.0.1"
edition = "2021"
description = "A simple tool to lossless manipulate image properties"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/NicolasDuboisToulouse/PhotosNormReloaded"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"]}
clap-markdown = "0.1.4"
colored = "2.2.0"
enumset = "1.1.5"
image = "0.25.5"
infer = "0.16.0"
#little_exif = "0.6.2"
little_exif = { git = "https://github.com/NicolasDuboisToulouse/little_exif" }
sanitise-file-name = "1.0.0"
tempfile = "3.14.0"
# turbojpeg is only used to rotate images lossless (or mostly)
# It is not used to encode/decode images
# default-features = false disable the need of NASM (disable the fast assembler code)
# cmake feature enables the static build of C code
# image feature enables the use of 'image' crate
# https://github.com/honzasp/rust-turbojpeg/tree/master/turbojpeg-sys
# https://github.com/libjpeg-turbo/libjpeg-turbo/blob/main/BUILDING.md
turbojpeg = {version = "1.1.1", default-features = false, features = ["image", "cmake"] }
